fix: css not showing in netlify

--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -18,6 +18,11 @@
 @import "./css/portfolio.css";
 @import "./css/make.css";
 
+a {
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
 a, a:focus {
     text-decoration: none;
     color: #987F28;
@@ -52,6 +57,13 @@ html, body {
 }
  .navbar-brand  {
     color:  #333;
+    display: inline-block;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    font-size: 1.25rem;
+    line-height: inherit;
+    white-space: nowrap;
 }
 
 .navbar-brand:hover {
@@ -63,42 +75,61 @@ html, body {
 .nav-link:hover {
     color: black;
 }
-
-// .sticky-top {
-//     position: -webkit-sticky;
-//     position: sticky;
-//     top: 0;
-//     z-index: 991;
-// }
-// .content, .taglist {
-//   list-style: none;
-//   margin-bottom: 0;
-//   margin-left: 0;
-//   margin-right: 1.5rem;
-//   display: flex;
-//   flex-wrap: wrap;
-//   justify-content: left;
-//   align-items: center;
-//   li {
-//     padding: 0 2rem 1rem 0;
-//     margin-bottom: 1.5rem;
-//     margin-top: 0;
-//   }
-// }
-// hr {
-//   width: 24px;
-//   height: 6px;
-// }
-// .r {
-//     width: 783px;
-//     height: 440px;
-// }
-// .wp-block-image {
-//     max-width: 100%;
-//     margin-bottom: 1em;
-//     margin-left: 0;
-//     margin-right: 0;
-// }
+.navbar .navbar-toggler {
+    outline: 0;
+    border-width: 0;
+}
+@media (min-width: 768px) {
+.navbar-expand-md .navbar-toggler {
+    display: none;
+    }
+}
+[type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
+    cursor: pointer;
+}
+button, input, optgroup, select, textarea {
+    margin: 0;
+    font-family: inherit;
+}
+@media (min-width: 768px) {
+.navbar-expand-md .navbar-collapse {
+    display: -webkit-flex!important;
+    display: flex!important;
+    -webkit-flex-basis: auto;
+    flex-basis: auto;
+    }
+}
+.navbar-collapse {
+    align-items: center;
+    flex-grow: 1;
+}
+@media (min-width: 768px) {
+.navbar-expand-md .navbar-nav {
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    }
+}
+.ml-auto, .mx-auto {
+    margin-left: auto!important;
+}
+.navbar-nav {
+    display: -webkit-flex;
+    display: flex;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+}
+ul, menu, dir {
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    -webkit-padding-start: 40px;
+}
+.navbar {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    font-weight: 300;
+}
 .gatsby-resp-image-link {
    width: 244px;
    padding: 13px;
@@ -127,6 +158,33 @@ html, body {
 }
 .fixed-top {
     z-index: 950;
+}
+.navbar {
+   display: flex;
+   align-items: center;
+   padding: .5rem 1rem;
+}
+a:not([href]):not([tabindex]), a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+.fixed-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+}
+.bg-white {
+    background-color: #fff!important;
+}
+@media (min-width: 768px) {
+.navbar-expand-md {
+    -webkit-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    }
 }
 .ex {
     margin-top: 10px;
